# recorder

./: .gitignore  README.md  pyproject.toml  start.sh
.github/: copilot-instructions.md
releases/: sound-recorder-0.1.0-macos-arm64.sha256
scripts/: bootstrap_m1.sh  common_m1.sh  create_release_bundle.sh  post_install_check.sh  run_recorder.sh
src/sound_recorder/: __init__.py  __main__.py  cli.py  dashboard.py  devices.py  playlist.py  recorder.py
tests/: test_cli.py  test_recorder.py
