[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sound-recorder"
version = "0.1.0"
description = "Native macOS Apple Silicon CLI audio recorder with rolling 60-minute segments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyobjc-framework-AVFoundation>=11.1,<12.1",
  "rich>=13,<14",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
sound-recorder = "sound_recorder.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/sound_recorder"]